# stop-detection

./: .gitlab-ci.yml  README.md  pyproject.toml
de4l_stop_detection/: stop_detection.py
stop_detection/: stop_detection.py
tests/: test_stop_detection.py
